--- a/server/pom.xml
+++ b/server/pom.xml
@@ -31,6 +31,11 @@
             <artifactId>log4j-core</artifactId>
             <version>2.18.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.39.2.0</version>
+        </dependency>
     </dependencies>
 
 </project>
